# ot-harjoitustyo

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopolipeli.md  sekvenssikaavio.md
src/: game_of_life.py  index.py  utils.py
src/tests/: game_of_life_test.py  utils_test.py
src/ui/: button.py  game_loop.py  game_of_life_renderer.py  grid_renderer.py
