[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Eetu Mäenpää",email = "me@eetumaenpaa.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
coverage = "^7.11.3"

